--- a/src/scss/4-layout/_header.sass
+++ b/src/scss/4-layout/_header.sass
@@ -1,5 +1,16 @@
-header 
-  nav 
-    color: #000000
-    font-size: 18px
-    font-weight: 500
+.head-wrap
+  display: flex;
+  justify-content: space-between;
+  margin: 60px 60px 0 60px;
+  .navbar 
+    display: flex;
+    align-items: center;
+    .showreel-navbar
+      margin-right: 60px;
+    .menu-navbar
+      margin-right: 15px;
+    .bar-navbar
+      position: -webkit-sticky; /* for Safari */
+      position: sticky;
+      top: 0;
+      align-self: flex-start;
