--- a/src/scss/main.sass
+++ b/src/scss/main.sass
@@ -2,7 +2,7 @@
 @import '1-helpers/functions';
 @import '1-helpers/mixins';
 @import '1-helpers/variables';
-
+@import '1-helpers/_animations';
 
 // 2 - tools 
 
@@ -20,4 +20,5 @@
 
 
 // 6 - pages
-@import '6-pages/Hero'
+@import '6-pages/hero';
+@import '6-pages/banner';
