some animations and chagest to vertical response

--- a/src/scss/1-helpers/_variables.sass
+++ b/src/scss/1-helpers/_variables.sass
@@ -1,5 +1,8 @@
+// ***************
+// Media breakpoints
+// ***************
+
 
 // ***************
-// Color Varraibles 
+// Color Varraibles
 // ****************
-
