--- a/src/scss/4-layout/_header.sass
+++ b/src/scss/4-layout/_header.sass
@@ -8,9 +8,10 @@
     .showreel-navbar
       margin-right: 60px;
     .menu-navbar
-      margin-right: 15px;
+      margin-right: 25px;
     .bar-navbar
       position: -webkit-sticky; /* for Safari */
       position: sticky;
       top: 0;
       align-self: flex-start;
+      cursor: pointer;
