--- a/src/scss/main.sass
+++ b/src/scss/main.sass
@@ -15,6 +15,7 @@
 // 4 - layout 
 @import '4-layout/footer';
 @import '4-layout/header';
+@import '4-layout/modalMenu';
 
 // 5 - modules
 
@@ -23,3 +24,4 @@
 @import '6-pages/hero';
 @import '6-pages/banner';
 @import '6-pages/_imgScroll';
+@import '6-pages/App';
