--- a/src/scss/6-pages/_banner.sass
+++ b/src/scss/6-pages/_banner.sass
@@ -8,7 +8,7 @@
   .left-to-right
     animation: left-to-right 35s linear 0s infinite;
     %banner
-      font-size: 80px;
+      font-size: 4vw;
       font-weight: 400;
     .banner
       @extend %banner
