--- a/src/scss/4-layout/_header.sass
+++ b/src/scss/4-layout/_header.sass
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: space-between;
   margin: 60px 60px 0 60px;
+  .logo-navbar
+    font-weight: 700;
   .navbar 
     display: flex;
     align-items: center;
