--- a/src/scss/6-pages/_banner.sass
+++ b/src/scss/6-pages/_banner.sass
@@ -1,5 +1,6 @@
 .scroll-wrap
   overflow: hidden
+  margin-bottom: 50px;
   .banner-wrap-left
     overflow: hidden
     display: grid;
@@ -15,4 +16,14 @@
     .banner-stroke
       @extend %banner
       +stroke
+  // .right-to-left
+  //   animation: right-to-left 35s linear 0s infinite;
+  //   %banner
+  //     font-size: 4vw;
+  //     font-weight: 400;
+  //   .banner
+  //     @extend %banner
+  //   .banner-stroke
+  //     @extend %banner
+  //     +stroke
 
