--- a/src/scss/main.sass
+++ b/src/scss/main.sass
@@ -25,3 +25,5 @@
 @import '6-pages/banner';
 @import '6-pages/_imgScroll';
 @import '6-pages/App';
+
+@import 'react-perfect-scrollbar/dist/css/styles'
