--- a/src/scss/1-helpers/_animations.sass
+++ b/src/scss/1-helpers/_animations.sass
@@ -9,6 +9,12 @@
     transform: translateX(100%)
   100%
     transform: translateX(0)
+@keyframes right-to-left
+  0%
+    transform: translateX(0)
+  100%
+    transform: translateX(100%)
+
 
 
 
