--- a/src/scss/6-pages/_hero.sass
+++ b/src/scss/6-pages/_hero.sass
@@ -21,5 +21,8 @@
           a
             text-decoration: none
             +stroke
+          a:hover
+            -webkit-text-fill-color: black;
+        
       
   
