created right to left banner scroll

--- a/src/scss/1-helpers/_animations.sass
+++ b/src/scss/1-helpers/_animations.sass
@@ -6,14 +6,14 @@
 
 @keyframes right-to-left
   0%
-    transform: translateX(100%)
+    transform: translateX(0%)
   100%
-    transform: translateX(0)
-@keyframes right-to-left
-  0%
-    transform: translateX(0)
-  100%
-    transform: translateX(100%)
+    transform: translateX(-40%)
+// @keyframes right-to-left
+//   0%
+//     transform: translateX(0)
+//   100%
+//     transform: translateX(100%)
 
 
 
