--- a/src/scss/1-helpers/_mixins.sass
+++ b/src/scss/1-helpers/_mixins.sass
@@ -4,4 +4,9 @@
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
 
+=stroke-light-grey
+  color: rgba(0,0,0,0.2);
+  -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: rgba(0,0,0,0.2);
   
