left to right on banner, footer added, last section added

--- a/src/scss/6-pages/_banner.sass
+++ b/src/scss/6-pages/_banner.sass
@@ -1,6 +1,7 @@
 .scroll-wrap
   overflow: hidden
   margin-bottom: 100px;
+  letter-spacing: -.05em;
   .banner-wrap-left
     overflow: hidden
     display: grid;
@@ -37,14 +38,3 @@
 .banner-stroke
   @extend %banner
   +stroke-light-grey
-  // .right-to-left
-  //   animation: right-to-left 35s linear 0s infinite;
-  //   %banner
-  //     font-size: 4vw;
-  //     font-weight: 400;
-  //   .banner
-  //     @extend %banner
-  //   .banner-stroke
-  //     @extend %banner
-  //     +stroke
-
