--- a/src/scss/main.sass
+++ b/src/scss/main.sass
@@ -21,9 +21,11 @@
 
 
 // 6 - pages
-@import '6-pages/hero';
-@import '6-pages/banner';
+@import '6-pages/_hero';
+@import '6-pages/_banner';
 @import '6-pages/_imgScroll';
-@import '6-pages/App';
+@import '6-pages/_app';
+@import '6-pages/_latestNews';
+@import '6-pages/_footer';
 
 @import 'react-perfect-scrollbar/dist/css/styles'
