--- a/src/scss/6-pages/_footer.sass
+++ b/src/scss/6-pages/_footer.sass
@@ -8,7 +8,7 @@ footer
     display: flex;
     flex-direction: column;
     .idea
-      height:
+      flex-grow: 4;
       h2 
         font-size: 85px;
         font-weight: 500;
