we can change colors now, added section header for img scrolling

--- a/src/scss/6-pages/_app.sass
+++ b/src/scss/6-pages/_app.sass
@@ -14,4 +14,15 @@
   .hero-msg-wrap
     p 
       margin: 0;
-    
+.background-trans
+  transition: background-color 1s linear;
+.bg-blue
+  background-color: #D8DDEC;
+.bg-green
+  background-color: #D4EBD4;
+.bg-orange
+  background-color: #F9DFE1;
+.bg-red
+  background-color: #F6D0E8;
+.bg-purple
+  background-color: #E9E1FC;
