--- a/src/scss/6-pages/_imgScroll.sass
+++ b/src/scss/6-pages/_imgScroll.sass
@@ -27,14 +27,16 @@ h2
       height: 840px;
       margin: 0;
       h4 
-        margin: 0 0 10px 0;
+        margin: 0 0 30px 0;
         font-weight: 400;
-        color: gray;
-        font-size: 24px
+        font-size: 30px
       p
-        margin: 0;
+        margin: 0 0 25px 0;
         font-weight: 400;
         font-size: 50px;
+      span
+        color: #696969;
+        font-size: 22px;
   .bottom 
     margin-top: auto;
   .img-scroller
