--- a/src/scss/6-pages/_hero.sass
+++ b/src/scss/6-pages/_hero.sass
@@ -13,7 +13,7 @@
           font-size: 26px;
       .hero-title
         overflow: hidden;
-        width: 90%;
+        width: 100%;
         display: flex;
         justify-content: space-between;
         .hero-title-item
@@ -21,8 +21,42 @@
           a
             text-decoration: none
             +stroke
-          a:hover
-            -webkit-text-fill-color: black;
+            &:hover
+              -webkit-text-fill-color: black;
+        .large
+          display: none
+@media screen and ( max-width: 1200px )
+  .hero-wrap
+    .hero 
+      .titles
+        .hero-title
+          flex-direction: column;
+          text-align: left;
+          .hero-title-item
+            display: flex;
+            margin-right: auto;
+            font-size: 55px;
+            border-bottom: 1px solid black;
+            margin-bottom: 25px;
+            a
+              -webkit-text-fill-color: black;
+          .large
+            display: block;
+          .small
+            display: none;
+@media screen and ( max-width: 775px )
+  .hero-wrap
+    .hero 
+      .titles
+        .hero-sub-wrap
+          .hero-subtitle
+            font-size: 18px;
+        .hero-title
+          .hero-title-item
+            font-size: 45px;
+            font-weight: 400;
+            a
+  
         
       
   
