--- a/src/scss/6-pages/_latestNews.sass
+++ b/src/scss/6-pages/_latestNews.sass
@@ -27,3 +27,29 @@
         text-align: left;
         color: gray;
         font-size: 15px;
+@media screen and ( max-width: 1200px )
+  .latest-news
+    h1 
+      font-size: 55px;
+      .title-br
+    .news-column
+      .news-post
+        p
+          font-size: 18px;
+          font-weight: 500;
+
+  
+@media screen and ( max-width: 765px )
+  .latest-news
+    padding: 0 5% 0 5%;
+    display: flex;
+    flex-direction: column;
+    h1 
+      padding: 0;
+      margin-bottom: 80px;
+      font-size: 40px;
+      .title-br
+        display: none;
+    .news-column
+      padding: 0;
+      .news-post
