Responsive, featured projects

--- a/src/scss/main.sass
+++ b/src/scss/main.sass
@@ -26,5 +26,6 @@
 @import '6-pages/_app';
 @import '6-pages/_latestNews';
 @import '6-pages/_footer';
+@import '6-pages/_project';
 
 @import 'react-perfect-scrollbar/dist/css/styles'
