--- a/src/scss/6-pages/_banner.sass
+++ b/src/scss/6-pages/_banner.sass
@@ -31,7 +31,7 @@
     animation: right-to-left 44s linear 0s infinite;
 
 %banner
-  font-size: 3.5em;
+  font-size: 2.8vw;
   font-weight: 400;
 .banner
   @extend %banner
