got rid of bug in HERO animation

--- a/src/scss/6-pages/_project.sass
+++ b/src/scss/6-pages/_project.sass
@@ -1,5 +1,6 @@
 .featured-projects
   display: none;
+  margin-bottom: 100px;
 @media screen and ( max-width: 1200px  )
   .featured-projects
     display: grid;
