fixed mobile footer margins and hamburger menu color fip

--- a/src/scss/4-layout/_header.sass
+++ b/src/scss/4-layout/_header.sass
@@ -10,10 +10,19 @@
     justify-content: center;
     .showreel-navbar
       margin-right: 60px;
+      display: flex;
+      align-items: center;
     .menu-navbar
+      display: flex;
+      align-items: center;
       margin-right: 25px;
-    .bar-navbar
-      cursor: pointer;
+    .holder
+      display: flex;
+      align-items: center;
+      margin-right: 17px;
+      .bar-navbar
+        cursor: pointer;
+        position: fixed;
 @media screen and ( max-width: 775px )
   .head-wrap
     .logo-navbar
