--- a/src/scss/6-pages/_app.sass
+++ b/src/scss/6-pages/_app.sass
@@ -3,7 +3,7 @@
   font-family: OpenSans;
   font-weight: 500;
   font-size: 18px;
-
+   
 .body-wrap 
   height: 110vh;
   display: grid;
@@ -28,6 +28,10 @@
   background-color: #E9E1FC;
 .bg-tan
   background-color: #fef5e2;
+.color-white 
+  color: white;
+.color-black
+  color: black;
 
 @media screen and ( max-width: 1200px )
   .body-wrap 
