removed unnecessary files and spaces

--- a/src/scss/4-layout/_modalMenu.sass
+++ b/src/scss/4-layout/_modalMenu.sass
@@ -6,7 +6,6 @@
   left: 0;
   background: rgba(238,238,238,.7);
   z-index: 10;
-
   .modal
     overflow: hidden;
     height: 100vh;
@@ -38,6 +37,9 @@
             height: 20px;
             overflow: hidden;
             position: relative;
+            a 
+              color: black;
+              cursor: pointer;
             .name-top
               position: absolute;
               top: 0;
