--- a/src/scss/6-pages/_latestNews.sass
+++ b/src/scss/6-pages/_latestNews.sass
@@ -1,10 +1,9 @@
 .latest-news
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: 0 13% 0 13%;
+  margin: 0 13% 0 13%;
   margin-top: 300px;
   h1 
-    //TODO: text down sizes at a break pt
     padding-left: 2%;
     margin-bottom: 0;
     margin-top: 0;
@@ -31,17 +30,14 @@
   .latest-news
     h1 
       font-size: 55px;
-      .title-br
     .news-column
       .news-post
         p
           font-size: 18px;
           font-weight: 500;
-
-  
 @media screen and ( max-width: 765px )
   .latest-news
-    padding: 0 5% 0 5%;
+    margin: 0 5% 0 5%;
     display: flex;
     flex-direction: column;
     h1 
@@ -52,4 +48,3 @@
         display: none;
     .news-column
       padding: 0;
-      .news-post
