--- a/src/scss/6-pages/_footer.sass
+++ b/src/scss/6-pages/_footer.sass
@@ -40,8 +40,8 @@ footer
           margin-bottom: 20px;
       .footer-socs
         display: grid;
-        grid-template-rows: 1fr 1fr;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        text-align: center;
         .bottom-row-1
           grid-column: 2;
         .bottom-row-2
