--- a/src/scss/6-pages/_imgScroll.sass
+++ b/src/scss/6-pages/_imgScroll.sass
@@ -7,6 +7,8 @@ h2
   margin-bottom: 170px;
 .stroke
   +stroke
+  &:hover
+    -webkit-text-fill-color: black;
 .img-scroll-section
   display: flex;
   margin-bottom: 500px;
@@ -25,6 +27,9 @@ h2
       justify-content: center;
       height: 840px;
       margin: 0;
+      a
+        text-decoration: none
+        color: black;
       h4 
         margin: 0 0 30px 0;
         font-weight: 400;
@@ -62,13 +67,14 @@ h2
         height: 840px;
         width: 515px;
 
+
   .img-scroller::-webkit-scrollbar
     display: none;
 
 .fixed 
   position: fixed !important;
   top: 50%;
-  left: 30%;
+  left: 27%;
   transform: translate(0%, -50%); 
   overflow-y: scroll;
 
