--- a/src/scss/6-pages/_project.sass
+++ b/src/scss/6-pages/_project.sass
@@ -14,8 +14,12 @@
         border-radius: 35px;
         width: 42vw;
         height: 42vw;
+        // border: solid 1px black;
+        -webkit-box-shadow: 0px 0px 15px -3px #000000; 
+        box-shadow: 0px 0px 15px -3px #000000;
       .project-text
         margin: 5% 22% 0 22%;
+        color: black;
         p
           text-align: center;
           font-size: 20px;
