sass and favicon update

--- a/src/scss/4-layout/_header.sass
+++ b/src/scss/4-layout/_header.sass
@@ -1,31 +1,31 @@
 .head-wrap
-  display: flex;
-  justify-content: space-between;
-  margin: 45px 45px 0 45px;
+  display: flex
+  justify-content: space-between
+  margin: 45px 45px 0 45px
   .logo-navbar
-    font-weight: 600;
-    font-size: 25px;
+    font-weight: 600
+    font-size: 25px
   .navbar 
-    display: flex;
-    justify-content: center;
+    display: flex
+    justify-content: center
     .showreel-navbar
-      margin-right: 60px;
-      display: flex;
-      align-items: center;
+      margin-right: 60px
+      display: flex
+      align-items: center
     .menu-navbar
-      display: flex;
-      align-items: center;
-      margin-right: 25px;
+      display: flex
+      align-items: center
+      margin-right: 25px
     .holder
-      display: flex;
-      align-items: center;
-      margin-right: 17px;
+      display: flex
+      align-items: center
+      margin-right: 17px
       .bar-navbar
-        cursor: pointer;
-        position: fixed;
+        cursor: pointer
+        position: fixed
 @media screen and ( max-width: 775px )
   .head-wrap
     .logo-navbar
     .navbar 
       .showreel-navbar
-        display: none;
+        display: none
