--- a/src/scss/6-pages/_app.sass
+++ b/src/scss/6-pages/_app.sass
@@ -1,40 +1,40 @@
 .App 
-  text-align: center;
-  font-family: OpenSans;
-  font-weight: 500;
-  font-size: 18px;
+  text-align: center
+  font-family: OpenSans
+  font-weight: 500
+  font-size: 18px
    
 .body-wrap 
-  height: 110vh;
-  display: grid;
-  grid-template-rows: 5fr 2fr;
-  flex-direction: column;
-  margin-right: 13%;
-  margin-left: 13%;
+  height: 110vh
+  display: grid
+  grid-template-rows: 5fr 2fr
+  flex-direction: column
+  margin-right: 13%
+  margin-left: 13%
   .hero-msg-wrap
     p 
-      margin: 0;
+      margin: 0
 .background-trans
-  transition: background-color 1s linear;
+  transition: background-color 1s linear
 .bg-blue
-  background-color: #e6fff8;
+  background-color: #e6fff8
 .bg-green
-  background-color: #D4EBD4;
+  background-color: #D4EBD4
 .bg-orange
-  background-color: #ffdfd1;
+  background-color: #ffdfd1
 .bg-red
-  background-color: #ffe0ed;
+  background-color: #ffe0ed
 .bg-purple
-  background-color: #E9E1FC;
+  background-color: #E9E1FC
 .bg-tan
-  background-color: #fef5e2;
+  background-color: #fef5e2
 .color-white 
-  color: white;
+  color: white
 .color-black
-  color: black;
+  color: black
 
 @media screen and ( max-width: 1200px )
   .body-wrap 
     .hero-msg-wrap
       p 
-        font-size: 20px;
+        font-size: 20px
