--- a/src/scss/6-pages/_hero.sass
+++ b/src/scss/6-pages/_hero.sass
@@ -1,28 +1,28 @@
 .hero-wrap
-  display: flex;
+  display: flex
   .hero
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
+    display: flex
+    justify-content: center
+    flex-direction: column
+    width: 100%
     .titles
       .hero-sub-wrap
-        overflow: hidden;
+        overflow: hidden
         .hero-subtitle
-          display: flex;
-          font-size: 26px;
+          display: flex
+          font-size: 26px
       .hero-title
-        overflow: hidden;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
+        overflow: hidden
+        width: 100%
+        display: flex
+        justify-content: space-between
         .hero-title-item
-          font-size: 6vw;
+          font-size: 6vw
           a
             text-decoration: none
             +stroke
             &:hover
-              -webkit-text-fill-color: black;
+              -webkit-text-fill-color: black
         .large
           display: none
 @media screen and ( max-width: 1200px )
@@ -30,31 +30,31 @@
     .hero 
       .titles
         .hero-title
-          flex-direction: column;
-          text-align: left;
+          flex-direction: column
+          text-align: left
           .hero-title-item
-            display: flex;
-            margin-right: auto;
-            font-size: 55px;
-            border-bottom: 1px solid black;
-            margin-bottom: 25px;
+            display: flex
+            margin-right: auto
+            font-size: 55px
+            border-bottom: 1px solid black
+            margin-bottom: 25px
             a
-              -webkit-text-fill-color: black;
+              -webkit-text-fill-color: black
           .large
-            display: block;
+            display: block
           .small
-            display: none;
+            display: none
 @media screen and ( max-width: 775px )
   .hero-wrap
     .hero 
       .titles
         .hero-sub-wrap
           .hero-subtitle
-            font-size: 18px;
+            font-size: 18px
         .hero-title
           .hero-title-item
-            font-size: 45px;
-            font-weight: 400;
+            font-size: 45px
+            font-weight: 400
             a
   
         
