--- a/src/scss/4-layout/_modalMenu.sass
+++ b/src/scss/4-layout/_modalMenu.sass
@@ -1,141 +1,141 @@
 .modal-bg
-  position: fixed;
-  height: 100vh;
-  width: 100%;
-  top: 0;
-  left: 0;
-  background: rgba(238,238,238,.7);
-  z-index: 10;
+  position: fixed
+  height: 100vh
+  width: 100%
+  top: 0
+  left: 0
+  background: rgba(238,238,238,.7)
+  z-index: 10
 
   .modal
-    overflow: hidden;
-    height: 100vh;
-    width: 45vw;
-    margin-left: auto;
-    background: white;
-    display: grid;
-    grid-template-rows: fr 3fr .8fr;
+    overflow: hidden
+    height: 100vh
+    width: 45vw
+    margin-left: auto
+    background: white
+    display: grid
+    grid-template-rows: fr 3fr .8fr
     .modal-close
-      padding: 3vh 60px 0 0;
-      display: flex;
-      justify-content: flex-end;
+      padding: 3vh 60px 0 0
+      display: flex
+      justify-content: flex-end
       .modal-close-button
         svg
-          font-size: 40px;
+          font-size: 40px
     .modal-body
-      padding: 0 0 0 80px;
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      padding: 0 0 0 80px
+      display: grid
+      grid-template-columns: 1fr 1fr 1fr
       .social
-        font-size: 16px;
-        font-weight: 500;
+        font-size: 16px
+        font-weight: 500
         .title
-          color: rgba(0, 0, 0, .4);
+          color: rgba(0, 0, 0, .4)
         .items
-          padding-top: 9vh;
+          padding-top: 9vh
           .item
-            margin-bottom: 3.5vh;
-            height: 20px;
-            overflow: hidden;
-            position: relative;
+            margin-bottom: 3.5vh
+            height: 20px
+            overflow: hidden
+            position: relative
             .name-top
-              position: absolute;
-              top: 0;
+              position: absolute
+              top: 0
             .name-bottom
-              position: absolute;
-              bottom: 100;
+              position: absolute
+              bottom: 100
       .menu
         .title
-          font-size: 16px;
-          font-weight: 500;
+          font-size: 16px
+          font-weight: 500
           color: rgba(0,0,0,.3)
         .links
-          padding-top: 6.5vh;
+          padding-top: 6.5vh
           %link
-            padding: 0;
-            font-size: 65px; 
-            font-weight: 400;
-            margin: 0 0 2.5vh 0;
-            display: flex;
-            flex-direction: column;
-            height: 80px;
-            position: relative;
-            overflow: hidden;
+            padding: 0
+            font-size: 65px 
+            font-weight: 400
+            margin: 0 0 2.5vh 0
+            display: flex
+            flex-direction: column
+            height: 80px
+            position: relative
+            overflow: hidden
           .link
             @extend %link
             a
-              color: black;
+              color: black
           .link-menu-small
-            display: none;
+            display: none
             @extend %link
             a
-              color: black;
+              color: black
     .modal-footer
-      padding-left: 80px;
-      font-size: 16px;
-      font-weight: 500;
+      padding-left: 80px
+      font-size: 16px
+      font-weight: 500
       .title
-        color: rgba(0, 0, 0, .4);
-        margin-bottom: 1vh;
+        color: rgba(0, 0, 0, .4)
+        margin-bottom: 1vh
       .info
-        font-size: 20px;
-        display: inline-block;
+        font-size: 20px
+        display: inline-block
       .info::after
-        content: '';
-        display: block;
-        padding-top: 7px;
-        border-bottom: 1px solid rgba(0,0,0,.2);
+        content: ''
+        display: block
+        padding-top: 7px
+        border-bottom: 1px solid rgba(0,0,0,.2)
 @media screen and ( max-height: 575px )
   .modal-bg
     .modal
-      display: flex;
-      flex-direction: column;
+      display: flex
+      flex-direction: column
       .modal-close
       .modal-body
         .social
           display: none
         .menu
-          margin-bottom: 30px;
+          margin-bottom: 30px
           .title
           .links
             .link
-              display: none;
+              display: none
             .link-menu-small
-              display: flex;
-              font-size: 40px;
-              height: 50px;
+              display: flex
+              font-size: 40px
+              height: 50px
 @media screen and ( max-width:1125px  )
   .modal-bg
     .modal
-      display: flex;
-      flex-direction: column;
+      display: flex
+      flex-direction: column
       .modal-close
       .modal-body
         .social
           display: none
         .menu
-          margin-bottom: 30px;
+          margin-bottom: 30px
 @media screen and ( max-width: 650px )
   .modal-bg
     .modal
-      display: flex;
-      flex-direction: column;
-      width: 100vw;
+      display: flex
+      flex-direction: column
+      width: 100vw
       .modal-close
-        padding: 15px;
+        padding: 15px
       .modal-body
         .social
           display: none
         .menu
-          margin-bottom: 50px;
+          margin-bottom: 50px
           .title
           .links
             .link
-              display: none;
+              display: none
             .link-menu-small
-              display: flex;
-              font-size: 40px;
-              height: 50px;
+              display: flex
+              font-size: 40px
+              height: 50px
        
            
  
