--- a/src/scss/6-pages/_latestNews.sass
+++ b/src/scss/6-pages/_latestNews.sass
@@ -1,55 +1,55 @@
 .latest-news
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding: 0 13% 0 13%;
-  margin-top: 300px;
+  display: grid
+  grid-template-columns: 1fr 1fr
+  padding: 0 13% 0 13%
+  margin-top: 300px
   h1 
     //TODO: text down sizes at a break pt
-    padding-left: 2%;
-    margin-bottom: 0;
-    margin-top: 0;
-    text-align: left;
-    font-size: 4em;
-    line-height: 1em;
-    font-weight: 400;
-    letter-spacing: -.05em;
-    color: #1a1a1a;
+    padding-left: 2%
+    margin-bottom: 0
+    margin-top: 0
+    text-align: left
+    font-size: 4em
+    line-height: 1em
+    font-weight: 400
+    letter-spacing: -.05em
+    color: #1a1a1a
   .news-column
-    padding-left: 6%;
+    padding-left: 6%
     .news-post
-      margin-bottom: 90px;
+      margin-bottom: 90px
       p 
-        font-size: 28px;
-        margin-top: 0;
-        margin-bottom: 10px;
-        font-weight: 400;
+        font-size: 28px
+        margin-top: 0
+        margin-bottom: 10px
+        font-weight: 400
       .news-date
-        text-align: left;
-        color: gray;
-        font-size: 15px;
+        text-align: left
+        color: gray
+        font-size: 15px
 @media screen and ( max-width: 1200px )
   .latest-news
     h1 
-      font-size: 55px;
+      font-size: 55px
       .title-br
     .news-column
       .news-post
         p
-          font-size: 18px;
-          font-weight: 500;
+          font-size: 18px
+          font-weight: 500
 
   
 @media screen and ( max-width: 765px )
   .latest-news
-    padding: 0 5% 0 5%;
-    display: flex;
-    flex-direction: column;
+    padding: 0 5% 0 5%
+    display: flex
+    flex-direction: column
     h1 
-      padding: 0;
-      margin-bottom: 80px;
-      font-size: 40px;
+      padding: 0
+      margin-bottom: 80px
+      font-size: 40px
       .title-br
-        display: none;
+        display: none
     .news-column
-      padding: 0;
+      padding: 0
       .news-post
