--- a/src/scss/4-layout/_modalMenu.sass
+++ b/src/scss/4-layout/_modalMenu.sass
@@ -36,6 +36,7 @@
           .item
             margin-bottom: 3.5vh
             height: 20px
+            cursor: pointer
             overflow: hidden
             position: relative
             .name-top
@@ -80,6 +81,8 @@
       .info
         font-size: 20px
         display: inline-block
+        a
+          color: black
       .info::after
         content: ''
         display: block
